# test

./: .env.example  .gitignore  AGENTS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.opencode/context/project-intelligence/: decisions-log.md  living-notes.md  navigation.md  technical-domain.md
alembic/: env.py
alembic/versions/: 596a8c94b762_add_organization_and_sis_user_fields.py  e1ceb3bffcd2_create_initial_tables.py  fbecad4fa6d7_add_classroom_material_visibility.py
app/: container.py  main.py
app/auth/: container.py
app/auth/application/service/: auth.py
app/auth/domain/entity/: __init__.py  identity.py
app/auth/domain/repository/: __init__.py  verifier.py
app/classroom/: container.py
app/classroom/application/exception/: __init__.py  classroom.py
app/classroom/application/service/: classroom.py
app/classroom/domain/command/: __init__.py
app/classroom/domain/entity/: classroom.py
app/classroom/domain/repository/: classroom.py
app/classroom/domain/usecase/: classroom.py
app/organization/: container.py
app/user/: container.py
core/: config.py
core/config/: __init__.py  base.py  dev.py  local.py  prod.py  test.py
core/db/: mixins.py  session.py  transactional.py
core/db/sqlalchemy/: __init__.py
core/domain/: types.py
core/fastapi/: listener.py  router.py
core/fastapi/dependencies/: permission.py
core/helpers/: token.py
core/repository/: base.py
tests/app/: test_app_bootstrap.py
tests/app/user/: test_user_api.py
tests/core/helpers/: test_argon2.py  test_token.py
(+62 files in other folders)
