[project]
name = "development-outsourcing-platform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
authors = [
    {name = "PRESSO", email = "caff1nepill@rmtechs.co.kr"}
]
dependencies = [
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]
ignore = ["B008"]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
preview = true
